# microprofile

./: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml
app/: config.py  database.py  models.py
app/routers/: profiles.py
routers/: profiles.py
tests/: conftest.py  test_profiles.py
