[project]
name = "microprofile"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "mongomock-motor>=0.0.36",
    "pytest-asyncio>=1.4.0",
]
