[project]
name = "microprofile"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.3",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "mongomock-motor>=0.0.36",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
